# easy-GOG-downloader

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  TUTORIAL.md  config.example.json  get_token.py  gog_downloader.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  publish-pypi.yml  release.yml
easy_gog_downloader/: __init__.py  get_token.py  gog_downloader.py  test_tool.py
