[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "easy-gog-downloader"
version = "1.0.2"
description = "Download offline installers from your GOG library"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "zGLados", email = "zglados@gmail.com"}
]
keywords = ["gog", "downloader", "games", "offline-installer", "backup"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment",
    "Topic :: Utilities",
]
requires-python = ">=3.8"
dependencies = [
    "requests>=2.31.0",
    "tqdm>=4.66.0",
]

[project.urls]
Homepage = "https://github.com/zGLados/easy-GOG-downloader"
Repository = "https://github.com/zGLados/easy-GOG-downloader"
Issues = "https://github.com/zGLados/easy-GOG-downloader/issues"
Changelog = "https://github.com/zGLados/easy-GOG-downloader/blob/main/CHANGELOG.md"

[project.scripts]
gog-downloader = "easy_gog_downloader.gog_downloader:main"
gog-get-token = "easy_gog_downloader.get_token:main"
gog-test = "easy_gog_downloader.test_tool:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["easy_gog_downloader*"]
exclude = ["tests*", "downloads*"]
